# bandit

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .travis.yml  .vimrc  CMakeLists.txt  LICENSE.txt  README.md  _config.yml  appveyor.yml  bandit-specs_CXX_cotire.cmake  codecov.yml  context.h  cross_compile.sh  failure_formatters.h  grammar.h  index.html  index.md  init_cmake.sh  issues.md  options.h  params.json  reference.md  releases.md  run_policies.h  runner.h  runningtests.md  version.h  writingtests.md
.github/workflows/: include-guards.yml
_layouts/: bandit.html  default.html  index.html
adapters/: interface.h
bandit/: adapters.h  assertion_exception.h  bandit.h  colorizers.h  context.h  controller.h  grammar.h  listener.h  options.h  reporters.h  runner.h  settings.h  test_run_error.h  types.h  version.h
bandit/adapters/: adapter.h  adapters.h  interface.h  snowhouse.h
bandit/assertion_frameworks/matchers/: BeCloseTo.h  BeEmpty.h  BeFalsy.h  BeGTE.h  BeGreaterThan.h  BeLTE.h  BeLessThan.h  BeNull.h  BeTruthy.h  Contain.h  Equal.h  Matcher.h  MatcherException.h  ThrowException.h  ValueProxy.h  must.h
bandit/assertion_frameworks/snowhouse/: .gitignore  CMakeLists.txt  README.md
bandit/assertion_frameworks/snowhouse/example/: main.cpp
bandit/assertion_frameworks/snowhouse/snowhouse/: assert.h  assertionexception.h  exceptions.h  snowhouse.h  stringize.h  stringizers.h
bandit/assertion_frameworks/snowhouse/snowhouse/constraints/: constraints.h  containsconstraint.h  endswithconstraint.h  equalsconstraint.h  equalscontainerconstraint.h  haslengthconstraint.h  isgreaterthanconstraint.h  islessthanconstraint.h  startswithconstraint.h
bandit/assertion_frameworks/snowhouse/snowhouse/constraints/expressions/: andexpression.h  expression.h  expression_fwd.h  notexpression.h  orexpression.h
bandit/assertion_frameworks/snowhouse/snowhouse/fluent/: constraintadapter.h  constraintlist.h  expressionbuilder.h
bandit/assertion_frameworks/snowhouse/snowhouse/fluent/operators/: andoperator.h  constraintoperator.h  notoperator.h  oroperator.h
bandit/assertion_frameworks/snowhouse/snowhouse/fluent/operators/collections/: atleastoperator.h  atmostoperator.h  collectionoperator.h  exactlyoperator.h
bandit/colorizers/: backend.h  colorizer.h  interface.h  light.h
bandit/failure_formatters/: default_failure_formatter.h  failure_formatter.h  failure_formatters.h  interface.h  posix.h  qt_creator.h  visual_studio_failure_formatter.h
bandit/matchers/: BeEmpty.h  BeGTE.h  BeLTE.h  BeNull.h  Contain.h  Equal.h  MatchProxy.h  Matcher.h  MatcherException.h  ThrowException.h  matchers.h  must.h
bandit/registration/: registar.h  registrar.h  registration.h  spec_registry.h
bandit/reporters/: colored_base.h  colored_reporter.h  colorizer.h  crash.h  crash_reporter.h  dots.h  dots_reporter.h  info.h  info_reporter.h  interface.h  progress_base.h  progress_reporter.h  reporter.h  reporters.h  single_line_reporter.h  singleline.h  spec.h  spec_reporter.h  summary.h  test_run_summary.h  xunit.h  xunit_reporter.h
bandit/run_policies/: always.h  always_run_policy.h  bandit.h  bandit_run_policy.h  interface.h  never.h  never_run_policy.h  run_policy.h
bandit/skip_policies/: always_include_policy.h
cotire/: bandit-specs_CXX_prefix.hxx
css/: main.css
docs/: CNAME  Gemfile  _config.yml  index.md  issues.md  reference.md  releases.md  runningtests.md  writingtests.md
docs/_layouts/: bandit.html  default.html
docs/css/: main.css
failure_formatters/: interface.h  visual_studio.h
registration/: registrar.h
reporters/: summary.h
specs/: before_each.spec.cpp  before_each_after_each.cpp  before_each_after_each.spec.cpp  colorizer.cpp  context.cpp  context.spec.cpp  describe.cpp  describe.spec.cpp  fuzzbox.cpp  fuzzbox.spec.cpp  it.cpp  it.spec.cpp  main.cpp  name_contains_skip_policy.spec.cpp  options.cpp  options.spec.cpp  run.cpp  run.spec.cpp  specs.h  synopsis.cpp  synopsis.spec.cpp
specs/failure_formatters/: default.cpp  default_formatter.spec.cpp  posix.cpp  qt_creator.cpp  visual_studio.cpp  visual_studio_failure_formatter.spec.cpp
specs/fakes/: fake_context.h  fake_reporter.h  fakes.h  logging_fake.h
specs/matchers/: be_close_to.cpp  be_empty.cpp  be_falsy.cpp  be_greater_than.cpp  be_gte.cpp  be_less_than.cpp  be_lte.cpp  be_null.cpp  be_truthy.cpp  contain.cpp  equal.cpp  throw_exception.cpp
specs/reporters/: colorizer.spec.cpp  crash.cpp  dots.cpp  dots_reporter.spec.cpp  info.cpp  info_reporter.spec.cpp  single_line.cpp  single_line_reporter.spec.cpp  singleline.cpp  spec.cpp  xunit.cpp  xunit_reporter.spec.cpp
specs/run_policies/: bandit.cpp  bandit_run_policy.spec.cpp
specs/util/: argv_helper.h  util.h
util/: check_documentation_output.sh  check_header_guards.sh  check_selfsufficiency.sh  format.sh  travis.sh  travis_after_success.sh  travis_before_script.sh  travis_common.sh  travis_script.sh  update_headers-only.sh
